--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon server.js",
     "frontend": "cd client && npm run start",
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
-    "buildClient": "cd ../frontend && npm run build"
+    "clientBuild": "cd ../frontend && npm run build"
   },
   "author": "",
   "license": "ISC",
